--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/types": "^7.8.7",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@types/node": "^12.12.28",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.12.0",
+    "react-loading-skeleton": "^2.0.1",
     "react-scripts": "3.4.0",
     "uuid": "^7.0.1"
   },
