--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SEARCH_URL=http://www.omdbapi.com/?apikey=db923a55
+REACT_APP_SEARCH_URL=http://www.omdbapi.com/
 REACT_APP_NODE_SERVER=http://localhost:3000
