--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@babel/types": "^7.8.7",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^24.9.1",
     "@types/node": "^12.12.28",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -19,6 +26,7 @@
     "react-dom": "^16.12.0",
     "react-loading-skeleton": "^2.0.1",
     "react-scripts": "3.4.0",
+    "react-test-renderer": "^16.12.0",
     "uuid": "^7.0.1"
   },
   "scripts": {
@@ -45,13 +53,7 @@
   },
   "devDependencies": {
     "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
     "css-loader": "^3.4.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-favoritemedium-typescript": "^0.16.0",
     "eslint-config-prettier": "^6.10.0",
@@ -59,7 +61,6 @@
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.19.1",
     "prettier-eslint": "^9.0.1",
-    "react-test-renderer": "^16.12.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
