--- a/package.json
+++ b/package.json
@@ -3,31 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/types": "^7.8.7",
-    "@material-ui/core": "^4.9.5",
+    "@babel/types": "^7.11.5",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.28",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.5",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.1",
     "@types/prop-types": "^15.7.3",
-    "@types/react": "^16.9.21",
-    "@types/react-dom": "^16.9.5",
-    "axios": "^0.19.2",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "lodash": "^4.17.15",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-confirm-alert": "^2.6.1",
-    "react-dom": "^16.12.0",
-    "react-loading-skeleton": "^2.0.1",
-    "react-scripts": "3.4.0",
-    "react-test-renderer": "^16.12.0",
-    "uuid": "^7.0.1"
+    "react": "^16.13.1",
+    "react-confirm-alert": "^2.6.2",
+    "react-dom": "^16.13.1",
+    "react-export-excel": "^0.5.3",
+    "react-loading-skeleton": "^2.1.1",
+    "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "webpack-dev-server",
@@ -52,21 +53,21 @@
     ]
   },
   "devDependencies": {
-    "@teamsupercell/typings-for-css-modules-loader": "^2.1.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-favoritemedium-typescript": "^0.16.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "html-webpack-plugin": "^3.2.0",
-    "prettier": "^1.19.1",
-    "prettier-eslint": "^9.0.1",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.1.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "@teamsupercell/typings-for-css-modules-loader": "^2.3.0",
+    "css-loader": "^4.3.0",
+    "eslint": "^7.9.0",
+    "eslint-config-favoritemedium-typescript": "^0.17.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "html-webpack-plugin": "^4.4.1",
+    "prettier": "^2.1.2",
+    "prettier-eslint": "^11.0.0",
+    "source-map-loader": "^1.1.0",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
