--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.5",
     "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.162",
     "@types/node": "^14.11.1",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.49",
@@ -19,17 +20,15 @@
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "export-to-csv": "^0.2.1",
     "lodash": "^4.17.20",
     "material-table": "^1.69.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
-    "react-export-excel": "^0.5.3",
     "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.3",
-    "react-test-renderer": "^16.13.1",
-    "uuid": "^8.3.0"
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "webpack-dev-server",
