--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_NODE_SERVER=http://localhost:3000
 # AUTH0 Related
 REACT_APP_AUTH0_DOMAIN=movie-shop.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=L5sw7TrStnjtpXbnpuMqRm2x5W0aaVEM
+REACT_APP_AUTH0_AUDIENCE=https://movie-shop-backend
