--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-test-renderer": "^16.13.1"
   },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -60,13 +60,16 @@
   "devDependencies": {
     "@teamsupercell/typings-for-css-modules-loader": "^2.3.0",
     "css-loader": "^4.3.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^7.9.0",
     "eslint-config-favoritemedium-typescript": "^0.17.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "html-webpack-plugin": "^4.4.1",
+    "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
+    "sass-loader": "^10.0.3",
     "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
