fix: css modules naming

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_SEARCH_URL=http://www.omdbapi.com/
-REACT_APP_NODE_SERVER=https://192.168.8.114:3000
+REACT_APP_NODE_SERVER=http://localhost:3000
 
 # AUTH0 Related
 REACT_APP_AUTH0_DOMAIN=movie-shop.us.auth0.com
