feat:end user styling

--- a/webpack.env
+++ b/webpack.env
@@ -1,5 +1,5 @@
 REACT_APP_SEARCH_URL=https://www.omdbapi.com/
-REACT_APP_NODE_SERVER=https://movie-shop-dev.el.r.appspot.com
+REACT_APP_NODE_SERVER=http://localhost:3000
 
 # AUTH0 Related
 REACT_APP_AUTH0_DOMAIN=movie-shop.us.auth0.com
