--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/**/*"
+    "lint": "eslint --fix ./src/**/*"
   },
   "eslintConfig": {
     "extends": "react-app"
