--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.20.0",
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -28,6 +29,7 @@
     "material-table": "^1.69.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-loading-skeleton": "^2.1.1",
     "react-router": "^5.2.0",
