--- a/package.json
+++ b/package.json
@@ -61,11 +61,16 @@
   },
   "devDependencies": {
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
     "css-loader": "^4.3.0",
     "css-modules-typescript-loader": "^4.0.1",
     "cypress": "^8.4.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
     "html-webpack-plugin": "^4.4.1",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
