--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "export-to-csv": "^0.2.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "lodash": "^4.17.21",
-    "material-table": "^1.69.3",
+    "material-table": "^1.63.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
@@ -34,7 +36,7 @@
     "react-loading-skeleton": "^2.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   },
   "scripts": {
@@ -62,7 +64,7 @@
   "devDependencies": {
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "css-loader": "^4.3.0",
+    "css-loader": "^6.6.0",
     "css-modules-typescript-loader": "^4.0.1",
     "cypress": "^8.4.1",
     "eslint": "^7.32.0",
@@ -71,15 +73,16 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
-    "html-webpack-plugin": "^4.4.1",
-    "node-sass": "^6.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
-    "prettier-eslint": "^13.0.0",
+    "prettier-eslint": "^8.2.2",
     "sass-loader": "^10.0.3",
     "source-map-loader": "^1.1.0",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.4.3",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   }
