--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "lodash": "^4.17.21",
-    "material-table": "^1.63.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
@@ -38,14 +37,12 @@
     "react-loading-skeleton": "^2.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
     "react-test-renderer": "^17.0.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
     "lint": "eslint --fix ./src/**/*"
   },
   "eslintConfig": {
@@ -66,6 +63,7 @@
   "devDependencies": {
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@vitejs/plugin-react": "^1.2.0",
     "css-loader": "^6.6.0",
     "css-modules-typescript-loader": "^4.0.1",
     "cypress": "^8.4.1",
@@ -85,6 +83,7 @@
     "ts-loader": "^8.0.3",
     "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
+    "vite": "^2.8.6",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   }
