--- a/webpack.env
+++ b/webpack.env
@@ -1,8 +1,8 @@
-REACT_APP_SEARCH_URL=https://www.omdbapi.com/
-REACT_APP_NODE_SERVER=https://movie-shop-backend.herokuapp.com
+VITE_SEARCH_URL=https://www.omdbapi.com/
+VITE_NODE_SERVER=https://movie-shop-backend.herokuapp.com
 
 # AUTH0 Related
-REACT_APP_AUTH0_DOMAIN=movie-shop.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=L5sw7TrStnjtpXbnpuMqRm2x5W0aaVEM
-REACT_APP_AUTH0_AUDIENCE=https://movie-shop-backend
-REACT_APP_AUTH0_ADMIN_USER=admin@movie-shop.com
+VITE_AUTH0_DOMAIN=movie-shop.us.auth0.com
+VITE_AUTH0_CLIENT_ID=L5sw7TrStnjtpXbnpuMqRm2x5W0aaVEM
+VITE_AUTH0_AUDIENCE=https://movie-shop-backend
+VITE_AUTH0_ADMIN_USER=admin@movie-shop.com
