--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "movie-shop",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@babel/types": "^7.15.6",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -16,21 +15,18 @@
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.174",
     "@types/node": "^16.10.1",
-    "@types/prop-types": "^15.7.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "axios": "^0.21.4",
     "chart.js": "^3.5.1",
-    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "export-to-csv": "^0.2.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
@@ -61,11 +57,8 @@
     ]
   },
   "devDependencies": {
-    "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@vitejs/plugin-react": "^1.2.0",
-    "css-loader": "^6.6.0",
-    "css-modules-typescript-loader": "^4.0.1",
     "cypress": "^8.4.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -73,18 +66,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
-    "html-webpack-plugin": "^5.5.0",
-    "node-sass": "^7.0.1",
     "prettier": "^2.4.1",
     "prettier-eslint": "^8.2.2",
-    "sass-loader": "^10.0.3",
-    "source-map-loader": "^1.1.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
     "typescript": "^4.4.3",
-    "url-loader": "^4.1.1",
-    "vite": "^2.8.6",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0"
+    "vite": "^2.8.6"
   }
 }
