--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "lint": "eslint --fix ./src/**/*",
-    "deploy": "firebase deploy --only hosting"
+    "deploy": "firebase deploy --only hosting",
+    "prepare": "husky install",
+    "check-types": "tsc --noEmit"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,6 +70,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
+    "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "prettier-eslint": "^8.2.2",
     "typescript": "^4.4.3",
