--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "husky": "^7.0.4",
     "prettier": "^2.4.1",
     "prettier-eslint": "^8.2.2",
+    "sass": "^1.49.9",
     "typescript": "^4.4.3",
     "vite": "^2.8.6"
   }
