--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-loading-skeleton": "^2.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "simpler-state": "^1.1.0"
   },
   "scripts": {
     "start": "vite",
