--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "lodash": "^4.17.21",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
