--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -30,6 +31,7 @@
     "lodash": "^4.17.21",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router": "^6.3.0",
