--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router": "^6.3.0",
