--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router": "^6.3.0",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-test-renderer": "^17.0.2",
     "simpler-state": "^1.1.0"
@@ -65,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-bootstrap": "^0.24.5",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@vitejs/plugin-react": "^1.2.0",
     "cypress": "^8.4.1",
