--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.3.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
