feat: paypal integration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 VITE_SEARCH_URL=https://www.omdbapi.com/
+VITE_PAYMENT_METHOD=STRIPE
+VITE_PAYPAL_CLIENT_ID=
 VITE_REDIRECT_TO_STRIPE=FALSE
 VITE_STRIPE_PK_TEST=pk_test_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaadsssssssssss
 VITE_NODE_SERVER=http://localhost:5000
