feat: paypal integration subscription

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_PAYPAL_CLIENT_ID=
 VITE_REDIRECT_TO_STRIPE=FALSE
 VITE_STRIPE_PK_TEST=pk_test_aaaaaaaaaaaaaaaaaaaaaaaaaaaaaadsssssssssss
 VITE_NODE_SERVER=http://localhost:5000
+VITE_PAYPAL_MANAGE_SUB_URL=https://www.sandbox.paypal.com/myaccount/autopay/connect
 
 
 # AUTH0 Related
